# IChat

./: .gitignore  Agents.md  CMakeLists.txt
.github/workflows/: build-windows.yml
cmake/: mingw-w64-toolchain.cmake
im_client/: CMakeLists.txt  README.md  res.qrc
im_client/.github/workflows/: build-windows.yml
im_client/include/: addcontactdialog.h  callbrowserbridge.h  callmediaadapter.h  callwebbridge.h  loginwindow.h  mainwindow.h  mainwindow_helpers.h  protocol.h  tcpclient.h
im_client/src/: addcontactdialog.cpp  callbrowserbridge.cpp  callmediaadapter.cpp  callwebbridge.cpp  loginwindow.cpp  main.cpp  mainwindow.cpp  mainwindow_calls.cpp  mainwindow_contacts.cpp  mainwindow_me.cpp  mainwindow_messages.cpp  mainwindow_moments.cpp  mainwindow_settings.cpp  protocol.cpp  tcpclient.cpp
im_client/web/: call.html
im_server/: CMakeLists.txt  README.md
im_server/docs/: DATABASE.md  PROTOCOL.md
im_server/sql/: 20260512_avatar_data.sql  20260515_group_avatar_data.sql  init_database.sql
im_server/src/: main.cpp
im_server/src/db/: db_pool.cpp  db_pool.h  user_service.cpp  user_service.h
im_server/src/dispatcher/: dispatcher.cpp  dispatcher.h
im_server/src/protocol/: codec.cpp  codec.h  message.h
im_server/src/server/: server.cpp  server.h
im_server/src/session/: session.cpp  session.h
im_server/src/thread/: thread_pool.cpp  thread_pool.h
include/: mainwindow.h
src/: loginwindow.cpp  main.cpp  mainwindow.cpp  tcpclient.cpp
